probe segmen count, make estimate, remove backfill concurrency setting
